--- a/Emu/PICO8/config.json
+++ b/Emu/PICO8/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "p8|png|miyoocmd",
+  "extlist": "p8|png|splore",
   "launchlist": [
     {
       "name": "Jump to random Pico-8 game",
