--- a/Emu/N64/config_hidden.json
+++ b/Emu/N64/config_hidden.json
@@ -16,6 +16,10 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
+      "name": "Emu Core: (✓MUPEN64PLUS)-ludicrousn64",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/km_ludicrousn64_xtreme_amped.sh"
+    },
+    {
       "name": "CPU Mode: (✓PERFORMANCE)-Overclock",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Overclock.sh"
     },
