--- a/Emu/N64/config_hidden.json
+++ b/Emu/N64/config_hidden.json
@@ -16,12 +16,12 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
-      "name": "Emu Core: (✓MUPEN64PLUS)-ludicrousn64",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/km_ludicrousn64_xtreme_amped.sh"
+      "name": "Emu Core: (✓LUDICROUSN64)-mupen64plus",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/mupen64plus.sh"
     },
     {
-      "name": "CPU Mode: (✓PERFORMANCE)-Overclock",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Overclock.sh"
+      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Performance.sh"
     },
     {
       "name": "Save current launch settings as per-game override",
