--- a/RetroArch/nohotkeyprofile/retroarch.cfg
+++ b/RetroArch/nohotkeyprofile/retroarch.cfg
@@ -124,7 +124,7 @@ core_set_supports_no_game_enable = "true"
 core_updater_auto_backup = "false"
 core_updater_auto_backup_history_size = "1"
 core_updater_auto_extract_archive = "true"
-core_updater_buildbot_assets_url = "OFF"
+core_updater_buildbot_assets_url = "http://buildbot.libretro.com/assets/"
 core_updater_buildbot_cores_url = "OFF"
 core_updater_show_experimental_cores = "false"
 crt_switch_center_adjust = "0"
