--- a/Emu/FFPLAY/config_hidden.json
+++ b/Emu/FFPLAY/config_hidden.json
@@ -1,10 +1,10 @@
 {
-  "label": "Videos",
+  "label": "Media",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/ffplay.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/ffplay.png",
   "launch": "launch.sh",
-  "rompath": "../../Roms/VIDEOS",
-  "imgpath": "../../Roms/VIDEOS/Imgs",
+  "rompath": "../../Roms/MEDIA",
+  "imgpath": "../../Roms/MEDIA/Imgs",
   "useswap": 1,
   "shortname": 0,
   "hidebios": 0,
