Change default core for Game Gear/Master System to Genesis Plus GX

--- a/Emu/GG/config.json
+++ b/Emu/GG/config.json
@@ -16,7 +16,7 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
-      "name": "Emu Core: (✓GEARSYSTEM)-picodrive-genesis+gx",
+      "name": "Emu Core: (✓GENESIS+GX)-picodrive-gearsystem",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core/picodrive.sh"
     },
     {
