--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -233,15 +233,15 @@ input_disk_prev_btn = "nul"
 input_disk_prev_mbtn = "nul"
 input_driver = "sdl"
 input_duty_cycle = "3"
-input_enable_hotkey = "nul"
+input_enable_hotkey = "rctrl"
 input_enable_hotkey_axis = "nul"
 input_enable_hotkey_btn = "nul"
 input_enable_hotkey_mbtn = "nul"
-input_exit_emulator = "nul"
+input_exit_emulator = "ctrl"
 input_exit_emulator_axis = "nul"
 input_exit_emulator_btn = "nul"
 input_exit_emulator_mbtn = "nul"
-input_fps_toggle = "nul"
+input_fps_toggle = "alt"
 input_fps_toggle_axis = "nul"
 input_fps_toggle_btn = "nul"
 input_fps_toggle_mbtn = "nul"
@@ -270,14 +270,14 @@ input_hold_slowmotion_axis = "nul"
 input_hold_slowmotion_btn = "nul"
 input_hold_slowmotion_mbtn = "nul"
 input_hotkey_block_delay = "5"
-input_joypad_driver = "linuxraw"
+input_joypad_driver = "sdl"
 input_keyboard_layout = ""
-input_load_state = "nul"
+input_load_state = "tab"
 input_load_state_axis = "nul"
 input_load_state_btn = "nul"
 input_load_state_mbtn = "nul"
 input_max_users = "5"
-input_menu_toggle = "nul"
+input_menu_toggle = "shift"
 input_menu_toggle_axis = "nul"
 input_menu_toggle_btn = "9"
 input_menu_toggle_gamepad_combo = "0"
@@ -1459,11 +1459,11 @@ input_player1_l_x_plus_axis = "nul"
 input_player1_l_x_plus_btn = "nul"
 input_player1_l_x_plus_mbtn = "nul"
 input_player1_l_y_minus = "nul"
-input_player1_l_y_minus_axis = "-1"
+input_player1_l_y_minus_axis = "nul"
 input_player1_l_y_minus_btn = "nul"
 input_player1_l_y_minus_mbtn = "nul"
 input_player1_l_y_plus = "nul"
-input_player1_l_y_plus_axis = "+1"
+input_player1_l_y_plus_axis = "nul"
 input_player1_l_y_plus_btn = "nul"
 input_player1_l_y_plus_mbtn = "nul"
 input_player1_left = "left"
@@ -2740,11 +2740,11 @@ input_runahead_toggle = "nul"
 input_runahead_toggle_axis = "nul"
 input_runahead_toggle_btn = "nul"
 input_runahead_toggle_mbtn = "nul"
-input_save_state = "nul"
+input_save_state = "backspace"
 input_save_state_axis = "nul"
 input_save_state_btn = "nul"
 input_save_state_mbtn = "nul"
-input_screenshot = "nul"
+input_screenshot = "space"
 input_screenshot_axis = "nul"
 input_screenshot_btn = "nul"
 input_screenshot_mbtn = "nul"
@@ -2765,11 +2765,11 @@ input_shader_toggle = "nul"
 input_shader_toggle_axis = "nul"
 input_shader_toggle_btn = "nul"
 input_shader_toggle_mbtn = "nul"
-input_state_slot_decrease = "nul"
+input_state_slot_decrease = "left"
 input_state_slot_decrease_axis = "nul"
 input_state_slot_decrease_btn = "nul"
 input_state_slot_decrease_mbtn = "nul"
-input_state_slot_increase = "nul"
+input_state_slot_increase = "right"
 input_state_slot_increase_axis = "nul"
 input_state_slot_increase_btn = "nul"
 input_state_slot_increase_mbtn = "nul"
@@ -2785,7 +2785,7 @@ input_toggle_fullscreen = "nul"
 input_toggle_fullscreen_axis = "nul"
 input_toggle_fullscreen_btn = "nul"
 input_toggle_fullscreen_mbtn = "nul"
-input_toggle_slowmotion = "nul"
+input_toggle_slowmotion = "e"
 input_toggle_slowmotion_axis = "nul"
 input_toggle_slowmotion_btn = "nul"
 input_toggle_slowmotion_mbtn = "nul"
@@ -2961,7 +2961,7 @@ netplay_start_as_spectator = "false"
 netplay_stateless_mode = "false"
 netplay_use_mitm_server = "false"
 network_on_demand_thumbnails = "false"
-notification_show_autoconfig = "true"
+notification_show_autoconfig = "false"
 notification_show_cheats_applied = "false"
 notification_show_config_override_load = "false"
 notification_show_fast_forward = "true"
@@ -2969,7 +2969,7 @@ notification_show_netplay_extra = "false"
 notification_show_patch_applied = "false"
 notification_show_refresh_rate = "false"
 notification_show_remap_load = "false"
-notification_show_save_state = "false"
+notification_show_save_state = "true"
 notification_show_screenshot = "true"
 notification_show_screenshot_duration = "0"
 notification_show_screenshot_flash = "0"
