--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -237,7 +237,7 @@ input_enable_hotkey = "rctrl"
 input_enable_hotkey_axis = "nul"
 input_enable_hotkey_btn = "nul"
 input_enable_hotkey_mbtn = "nul"
-input_exit_emulator = "ctrl"
+input_exit_emulator = "nul"
 input_exit_emulator_axis = "nul"
 input_exit_emulator_btn = "nul"
 input_exit_emulator_mbtn = "nul"
@@ -1451,11 +1451,11 @@ input_player1_l_axis = "nul"
 input_player1_l_btn = "nul"
 input_player1_l_mbtn = "nul"
 input_player1_l_x_minus = "nul"
-input_player1_l_x_minus_axis = "nul"
+input_player1_l_x_minus_axis = "-0"
 input_player1_l_x_minus_btn = "nul"
 input_player1_l_x_minus_mbtn = "nul"
 input_player1_l_x_plus = "nul"
-input_player1_l_x_plus_axis = "nul"
+input_player1_l_x_plus_axis = "+0"
 input_player1_l_x_plus_btn = "nul"
 input_player1_l_x_plus_mbtn = "nul"
 input_player1_l_y_minus = "nul"
