--- a/App/AdvancedSettings/config.json
+++ b/App/AdvancedSettings/config.json
@@ -2,5 +2,5 @@
 "label": "Advanced Settings",
 "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/menuswitch.png",
 "launch": "launch.sh",
-"description": "Text Based Setting App Testing"
+"description": "Change spruce configurations and apps"
 }
