--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -237,7 +237,7 @@ input_enable_hotkey = "rctrl"
 input_enable_hotkey_axis = "nul"
 input_enable_hotkey_btn = "nul"
 input_enable_hotkey_mbtn = "nul"
-input_exit_emulator = "nul"
+input_exit_emulator = "ctrl"
 input_exit_emulator_axis = "nul"
 input_exit_emulator_btn = "nul"
 input_exit_emulator_mbtn = "nul"
@@ -2896,7 +2896,7 @@ menu_ticker_type = "1"
 menu_timedate_date_separator = "0"
 menu_timedate_enable = "true"
 menu_timedate_style = "2"
-menu_unified_controls = "false"
+menu_unified_controls = "true"
 menu_use_preferred_system_color_theme = "false"
 menu_wallpaper = ""
 menu_wallpaper_opacity = "0.300000"
