--- a/Emu/PS/config.json
+++ b/Emu/PS/config.json
@@ -16,6 +16,10 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
+      "name": "Emu Core: (✓PCSX_REARMED)-duckswanstation",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/km_duckswanstation_xtreme_amped.sh"
+    },
+    {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Performance.sh"
     },
