--- a/spruce/bin/Samba/config/smb.conf
+++ b/spruce/bin/Samba/config/smb.conf
@@ -9,9 +9,9 @@
     disable spoolss = yes
     log level = 0
     log file = /dev/null
-    private dir = /mnt/SDCARD/spruce/bin/Samba/runtime/private
-    lock directory = /mnt/SDCARD/spruce/bin/Samba/runtime/lock
-    pid directory = /mnt/SDCARD/spruce/bin/Samba/runtime/run
+    private dir = /tmp/samba/private
+    lock directory = /tmp/samba/lock
+    pid directory = /tmp/samba/run
 
 [SDCARD]
     path = /mnt/SDCARD
