--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -101,23 +101,23 @@ content_music_history_directory = "default"
 content_music_history_path = ":/content_music_history.lpl"
 content_runtime_log = "false"
 content_runtime_log_aggregate = "false"
-content_show_add = "true"
+content_show_add = "false"
 content_show_add_entry = "2"
 content_show_contentless_cores = "2"
-content_show_explore = "true"
-content_show_favorites = "true"
+content_show_explore = "false"
+content_show_favorites = "false"
 content_show_history = "true"
 content_show_images = "true"
 content_show_music = "true"
 content_show_netplay = "true"
-content_show_playlists = "true"
+content_show_playlists = "false"
 content_show_settings = "true"
 content_show_settings_password = ""
 content_video_directory = "default"
 content_video_history_path = ":/content_video_history.lpl"
 core_assets_directory = "./.retroarch/downloads"
 core_info_cache_enable = "true"
-core_info_savestate_bypass = "false"
+core_info_savestate_bypass = "true"
 core_option_category_enable = "true"
 core_options_path = ""
 core_set_supports_no_game_enable = "true"
@@ -2753,11 +2753,11 @@ input_send_debug_info_axis = "nul"
 input_send_debug_info_btn = "nul"
 input_send_debug_info_mbtn = "nul"
 input_sensors_enable = "true"
-input_shader_next = "nul"
+input_shader_next = "down"
 input_shader_next_axis = "nul"
 input_shader_next_btn = "nul"
 input_shader_next_mbtn = "nul"
-input_shader_prev = "nul"
+input_shader_prev = "up"
 input_shader_prev_axis = "nul"
 input_shader_prev_btn = "nul"
 input_shader_prev_mbtn = "nul"
@@ -2868,7 +2868,7 @@ menu_scroll_fast = "false"
 menu_shader_pipeline = "1"
 menu_show_advanced_settings = "true"
 menu_show_configurations = "true"
-menu_show_core_updater = "true"
+menu_show_core_updater = "false"
 menu_show_help = "true"
 menu_show_information = "true"
 menu_show_latency = "true"
@@ -3003,28 +3003,28 @@ playlist_use_filename = "false"
 playlist_use_old_format = "false"
 preemptive_frames_enable = "false"
 preemptive_frames_hide_warnings = "false"
-quick_menu_show_add_to_favorites = "true"
+quick_menu_show_add_to_favorites = "false"
 quick_menu_show_cheats = "true"
 quick_menu_show_close_content = "true"
 quick_menu_show_controls = "true"
-quick_menu_show_core_options_flush = "false"
-quick_menu_show_download_thumbnails = "true"
+quick_menu_show_core_options_flush = "true"
+quick_menu_show_download_thumbnails = "false"
 quick_menu_show_information = "true"
 quick_menu_show_options = "true"
 quick_menu_show_recording = "true"
 quick_menu_show_replay = "false"
-quick_menu_show_reset_core_association = "true"
+quick_menu_show_reset_core_association = "false"
 quick_menu_show_restart_content = "true"
 quick_menu_show_resume_content = "true"
 quick_menu_show_save_content_dir_overrides = "true"
 quick_menu_show_save_core_overrides = "true"
 quick_menu_show_save_game_overrides = "true"
 quick_menu_show_save_load_state = "true"
-quick_menu_show_savestate_submenu = "true"
-quick_menu_show_set_core_association = "true"
+quick_menu_show_savestate_submenu = "false"
+quick_menu_show_set_core_association = "false"
 quick_menu_show_shaders = "true"
-quick_menu_show_start_recording = "true"
-quick_menu_show_start_streaming = "true"
+quick_menu_show_start_recording = "false"
+quick_menu_show_start_streaming = "false"
 quick_menu_show_streaming = "true"
 quick_menu_show_take_screenshot = "true"
 quick_menu_show_undo_save_load_state = "true"
@@ -3033,7 +3033,7 @@ quit_press_twice = "false"
 record_driver = "null"
 recording_config_directory = "./.retroarch/records_config"
 recording_output_directory = "./.retroarch/records"
-remap_save_on_exit = "false"
+remap_save_on_exit = "true"
 replay_auto_index = "true"
 replay_checkpoint_interval = "0"
 replay_max_keep = "0"
@@ -3084,7 +3084,7 @@ screen_brightness = "100"
 screen_orientation = "0"
 screenshot_directory = "./.retroarch/screenshots"
 screenshots_in_content_dir = "false"
-settings_show_accessibility = "true"
+settings_show_accessibility = "false"
 settings_show_achievements = "true"
 settings_show_ai_service = "true"
 settings_show_audio = "true"
@@ -3099,9 +3099,9 @@ settings_show_latency = "true"
 settings_show_logging = "true"
 settings_show_network = "true"
 settings_show_onscreen_display = "true"
-settings_show_playlists = "true"
-settings_show_power_management = "true"
-settings_show_recording = "true"
+settings_show_playlists = "false"
+settings_show_power_management = "false"
+settings_show_recording = "false"
 settings_show_saving = "true"
 settings_show_user = "true"
 settings_show_user_interface = "true"
