--- a/Emu/PSP/config.json
+++ b/Emu/PSP/config.json
@@ -9,7 +9,7 @@
   "useswap": 0,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "iso|cso",
+  "extlist": "iso|cso|chd",
   "launchlist": [
     {
       "name": "Jump to random PlayStation Portable game",
