--- a/.github/workflows/backup-retroarch.yml
+++ b/.github/workflows/backup-retroarch.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.ref_name }}  # Check out the branch where the change was made
 
@@ -28,4 +28,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add "$TARGET_PATH"
           git commit -m "Sync retroarch.cfg to $TARGET_PATH" || echo "No changes to commit"
-          git push origin ${{ github.ref_name }} || echo "No changes to push"
+          git push "https://${{ github.token }}@github.com/${{ github.repository }}.git" "${{ github.ref_name }}" || echo "No changes to push"
