--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -14,6 +14,7 @@ samba=1
 sftpgo=1
 show_battery_percent=0
 skip_shutdown_confirm=1
+sleep_powerdown=5m
 syncthing=1
 tap_home=Game Switcher
 hold_home=In-game menu
