--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -8,6 +8,7 @@ idlemon_in_game=30m
 idlemon_in_menu=2m
 maxGamesInGS=10
 recentsTile=1
+rumble_intensity=Medium
 runGSAtBoot=1
 runGSOnGameExit=1
 samba=1
