--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -4,6 +4,7 @@ disableWifiInGame=1
 dropbear=1
 enableNetworkTimeSync=1
 expertRA=1
+fake08_allow_png=1
 idlemon_in_game=30m
 idlemon_in_menu=2m
 maxGamesInGS=10
