--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -8,6 +8,7 @@ fake08_allow_png=1
 idlemon_in_game=30m
 idlemon_in_menu=2m
 maxGamesInGS=10
+pico8_control_profile=Racing
 recentsTile=1
 rumble_intensity=Medium
 runGSAtBoot=1
