--- a/Emu/POKE/config.json
+++ b/Emu/POKE/config.json
@@ -9,7 +9,7 @@
   "useswap": 0,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "min|zip",
+  "extlist": "min|zip|7z",
   "launchlist": [
     {
       "name": "Jump to random Pokemon Mini game",
