--- a/App/PyUI/config.json
+++ b/App/PyUI/config.json
@@ -3,5 +3,5 @@
   "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/menuswitch.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/menuswitch.png",
   "launch": "launch.sh",
-  "description": "New OpenSource MainUI in Python"
+  "description": "Toggle between MainUI and PyUI"
 }
