--- a/Emu/DC/config.json
+++ b/Emu/DC/config.json
@@ -8,10 +8,6 @@
   "extlist": "chd|cdi|gdi|cue|iso|m3u",
   "launchlist": [
     {
-      "name": "Emu Core: (✓FLYCAST_LR)-flycast_alt",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
-    },
-    {
       "name": "Generate M3U playlists for multi-disc games",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/m3u_generator.sh"
     }
@@ -24,6 +20,26 @@
         "Overclock"
       ],
       "selected": "Performance",
+      "overrides": {}
+    },
+    "Emulator_A30": {
+      "display": "Retroarch Core",
+      "devices": ["MIYOO_A30"],
+      "options": [
+        "flycast",
+        "km_flycast_xtreme"
+      ],
+      "selected": "flycast",
+      "overrides": {}
+    },
+    "Emulator_64": {
+      "display": "Emulator",
+      "devices": ["MIYOO_FLIP", "TRIMUI_SMART_PRO", "TRIMUI_BRICK"],
+      "options": [
+        "Flycast-libretro",
+        "Flycast-standalone"
+      ],
+      "selected": "flycast-libretro",
       "overrides": {}
     }
   },
