--- a/Emu/PS/config.json
+++ b/Emu/PS/config.json
@@ -8,10 +8,6 @@
   "extlist": "m3u|chd|cue|img|mdf|pbp|PBP|toc|cbn",
   "launchlist": [
     {
-      "name": "Emu Core: (✓PCSX_REARMED)-duckswanstation",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
-    },
-    {
       "name": "Generate M3U playlists for multi-disc games",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/m3u_generator.sh"
     }
@@ -25,6 +21,32 @@
         "Overclock"
       ],
       "selected": "Smart",
+      "overrides": {}
+    },
+    "Emulator_A30": {
+      "display": "Retroarch Core",
+      "devices": [
+        "MIYOO_A30"
+      ],
+      "options": [
+        "pcsx_rearmed",
+        "km_duckswanstation_xtreme_amped"
+      ],
+      "selected": "pcsx_rearmed",
+      "overrides": {}
+    },
+    "Emulator_64": {
+      "display": "Emulator",
+      "devices": [
+        "MIYOO_FLIP",
+        "TRIMUI_SMART_PRO",
+        "TRIMUI_BRICK"
+      ],
+      "options": [
+        "pcsx_rearmed",
+        "swanstation"
+      ],
+      "selected": "pcsx_rearmed",
       "overrides": {}
     }
   },
